# Cpp-Projects

./: README.md
BookInventory/: CMakeLists.txt  book.cpp  book.h  main.cpp
BullsAndCow/: CMakeLists.txt  a.out  bullandcow.cpp  bullandcow.h  main.cpp
InformationSystem/: CMakeLists.txt  employee.cpp  employee.h  main.cpp  person.cpp  person.h
MessageLogger/: CMakeLists.txt  main.cpp  mylogger.cpp  mylogger.h
